src/math_ops/snapshots/rbx_types_ops__math_ops__color3__color3_add_color3.snap
---
source: src/math_ops/color3.rs
expression: "Color3::new(1.0, 0.5, 0.2).add(&Color3::new(1.0, 0.5, 0.2).into())"
---
Color3:
  - 2
  - 1
  - 0.4
