src/math_ops/snapshots/rbx_types_ops__math_ops__color3__color3_add_f32.snap
---
source: src/math_ops/color3.rs
expression: "Color3::new(1.0, 0.5, 0.2).add(&10.0f32.into())"
---
Color3:
  - 11
  - 10.5
  - 10.2
