src/math_ops/snapshots/rbx_types_ops__math_ops__color3__color3_floor_div_f32.snap
---
source: src/math_ops/color3.rs
expression: "Color3::new(1.0, 0.5, 0.2).floor_div(&16.2f32.into())"
---
Color3:
  - 0
  - 0
  - 0
